--- a/css/style.css
+++ b/css/style.css
@@ -1476,9 +1476,9 @@ body {
 }
 
 .home-header .container img {
-  margin-top: .5rem;
+  margin-top: 0.5rem;
   width: 9rem;
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .home-header .container .nav {
@@ -1524,7 +1524,7 @@ body {
 }
 
 .home-header .container .nav .menu img {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
   width: 2rem;
 }
 
@@ -1835,12 +1835,15 @@ body {
   font-weight: lighter;
 }
 
-.client .container .client-image .client-logo3 img, .client .container .client-image .client-logo2 img, .client .container .client-image .client-logo1 img {
+.client .container .client-image .client-logo3 img,
+.client .container .client-image .client-logo2 img,
+.client .container .client-image .client-logo1 img {
   margin-left: 4rem;
   width: 10rem;
 }
 
-.client .container .client-image .client-logo4 img, .client .container .client-image .client-logo5 img {
+.client .container .client-image .client-logo4 img,
+.client .container .client-image .client-logo5 img {
   margin-left: 5rem;
   width: 7rem;
 }
@@ -1893,7 +1896,7 @@ body {
 .contact .contact-container .contact-list div a span {
   margin-left: 1rem;
   color: #4D4B4B;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 
 .contact .contact-container .contact-btn {
@@ -2122,11 +2125,14 @@ footer .footer-copyright .container div {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
   }
-  .client .container .client-image .client-logo3 img, .client .container .client-image .client-logo2 img, .client .container .client-image .client-logo1 img {
+  .client .container .client-image .client-logo3 img,
+  .client .container .client-image .client-logo2 img,
+  .client .container .client-image .client-logo1 img {
     margin-left: 0rem;
     width: 10rem;
   }
-  .client .container .client-image .client-logo4 img, .client .container .client-image .client-logo5 img {
+  .client .container .client-image .client-logo4 img,
+  .client .container .client-image .client-logo5 img {
     margin-left: 0rem;
     width: 7rem;
   }
@@ -2302,11 +2308,14 @@ footer .footer-copyright .container div {
   .client {
     margin-bottom: 10rem;
   }
-  .client .container .client-image .client-logo3 img, .client .container .client-image .client-logo2 img, .client .container .client-image .client-logo1 img {
+  .client .container .client-image .client-logo3 img,
+  .client .container .client-image .client-logo2 img,
+  .client .container .client-image .client-logo1 img {
     margin-left: 0rem;
     width: 10rem;
   }
-  .client .container .client-image .client-logo4 img, .client .container .client-image .client-logo5 img {
+  .client .container .client-image .client-logo4 img,
+  .client .container .client-image .client-logo5 img {
     margin-left: 1rem;
     width: 7rem;
   }
@@ -2435,7 +2444,7 @@ footer .footer-copyright .container div {
     text-decoration: none;
   }
   .home-header .container .nav .nav-container ul li a:hover {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     font-weight: bold;
     color: #fff;
   }
@@ -2553,11 +2562,13 @@ footer .footer-copyright .container div {
     font-size: 1rem;
   }
   .client .container .client-image .client-logo3 img,
-  .client .container .client-image .client-logo2 img, .client .container .client-image .client-logo1 img {
+  .client .container .client-image .client-logo2 img,
+  .client .container .client-image .client-logo1 img {
     margin-left: 5rem;
     width: 10rem;
   }
-  .client .container .client-image .client-logo4 img, .client .container .client-image .client-logo5 img {
+  .client .container .client-image .client-logo4 img,
+  .client .container .client-image .client-logo5 img {
     margin-left: 6.3rem;
     width: 7rem;
   }
@@ -2578,7 +2589,7 @@ footer .footer-copyright .container div {
     margin-top: 5rem;
   }
   .contact .contact-container .contact-list div a img {
-    margin-top: .1rem;
+    margin-top: 0.1rem;
   }
   .contact .contact-container .contact-list div a span {
     font-size: 1rem;
@@ -2641,12 +2652,16 @@ footer .footer-copyright .container div {
   footer .footer-copyright .container div {
     width: 100%;
     text-align: center;
-    font-size: .8rem;
+    font-size: 0.8rem;
     overflow: hidden;
   }
 }
 
 @media screen and (min-width: 1920px) {
+  .home-header {
+    height: 100vh;
+    overflow: hidden;
+  }
   .home-header .container {
     height: 100%;
   }
@@ -2655,14 +2670,13 @@ footer .footer-copyright .container div {
     width: 10rem;
   }
   .home-header .moto {
-    height: 50vh;
     display: grid;
     place-items: center;
-    margin-top: 25rem;
+    margin-top: 35rem;
     margin-left: 1rem;
   }
   .home-header .moto h1 {
-    font-size: 3em;
+    font-size: 3rem;
     margin: 0.5em;
     color: #fff;
   }
