--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -77,7 +77,7 @@
                   text-align: center;
                   line-height: 2rem;
                 a {
-                    font-size: 24px;
+                    font-size: 1rem;
                   text-decoration: none;
 
                 
@@ -143,7 +143,7 @@
             }
             .divide{
               margin-top: 1rem;
-              margin-left: 40rem;
+              margin-left: 50rem;
            
                
             }
