--- a/css/style.css
+++ b/css/style.css
@@ -1654,11 +1654,14 @@ body {
 
 .offer .container .offer-list .offer1 .offer-col {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .offer .container .offer-list .offer1 .offer-col .offer-image {
   width: 2rem;
-  margin-left: 8rem;
   margin-bottom: 1rem;
 }
 
@@ -1835,16 +1838,20 @@ body {
   font-weight: lighter;
 }
 
+.client .container .client-image {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .client .container .client-image .client-logo3 img,
 .client .container .client-image .client-logo2 img,
 .client .container .client-image .client-logo1 img {
-  margin-left: 4rem;
   width: 10rem;
 }
 
 .client .container .client-image .client-logo4 img,
 .client .container .client-image .client-logo5 img {
-  margin-left: 5rem;
   width: 7rem;
 }
 
@@ -1906,7 +1913,6 @@ body {
 .map1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  z-index: -1;
 }
 
 .map1 .location {
@@ -2156,7 +2162,7 @@ footer .footer-copyright .container div {
     margin-top: 2rem;
   }
   .location .map-responsive {
-    gap: 0.1rem;
+    gap: 0.5rem;
   }
   footer .container {
     width: 90%;
@@ -2253,7 +2259,6 @@ footer .footer-copyright .container div {
   }
   .offer .container .offer-list .offer1 .offer-col .offer-image {
     width: 3rem;
-    margin-left: 11rem;
     margin-bottom: 1.3rem;
   }
   .offer .container .offer-list .offer1 .offer-col .offer-desc h2 {
@@ -2500,7 +2505,6 @@ footer .footer-copyright .container div {
   }
   .offer .container .offer-list .offer1 .offer-col .offer-image {
     width: 4rem;
-    margin-left: 15rem;
     margin-bottom: 2rem;
   }
   .offer .container .offer-list .offer1 .offer-col .offer-desc h2 {
