--- a/scss/style.scss
+++ b/scss/style.scss
@@ -199,9 +199,15 @@
       .offer1 {
         .offer-col {
           text-align: center;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
           .offer-image {
+          
+          
             width: 2rem;
-            margin-left: 8rem;
+            // margin-left: 8rem;
             margin-bottom: 1rem;
           }
           .offer-desc {
@@ -388,18 +394,21 @@
     }
 
     .client-image {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       .client-logo3,
       .client-logo2,
       .client-logo1 {
         img {
-          margin-left: 4rem;
+        
           width: 10rem;
         }
       }
       .client-logo4,
       .client-logo5 {
         img {
-          margin-left: 5rem;
+         
           width: 7rem;
         }
       }
@@ -464,7 +473,7 @@
 .map1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  z-index: -1;
+
   .location {
     height: 25rem;
     overflow: hidden;
@@ -755,7 +764,8 @@ footer {
   }
   .location {
     .map-responsive {
-      gap: 0.1rem;
+      gap: 0.5rem;
+
     }
   }
   footer {
@@ -876,7 +886,7 @@ footer {
           .offer-col {
             .offer-image {
               width: 3rem;
-              margin-left: 11rem;
+            
               margin-bottom: 1.3rem;
             }
             .offer-desc {
@@ -1179,7 +1189,7 @@ footer {
             text-align: center;
             .offer-image {
               width: 4rem;
-              margin-left: 15rem;
+            
               margin-bottom: 2rem;
             }
             .offer-desc {
