--- a/scss/style.scss
+++ b/scss/style.scss
@@ -401,14 +401,14 @@
       .client-logo2,
       .client-logo1 {
         img {
-        
+        margin-bottom:1rem ;
           width: 10rem;
         }
       }
       .client-logo4,
       .client-logo5 {
         img {
-         
+          margin-bottom:1rem ;
           width: 7rem;
         }
       }
